# FAUgen-AI

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/: embeddings.index  metadata.parquet
src/: llm_client.py
src/agent/: agent.py  cleaner_agent.py  embeddings.py  ex_main.py  rag_agent.py
src/excel_processing/: aces_metadata_output.xlsx  combined_output.xlsx  metadata_title_desc.xlsx  sitemap2excel.py  sitemap_sites.xlsx  split_urls.py  split_urls_output.xlsx  title_descriptions.py  website2excel.py
src/tools/: excel_appender.py  pdf_parser.py  scraper.py
